[metadata]
name = cns
version = 2014
summary = Core Network Service RESTful Application services
description-file =
    README.rst
author = Freescale
author-email = b37207@freescale.com
home-page = http://www.freescale.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cns

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cns/locale/cns.pot

[compile_catalog]
directory = cns/locale
domain = cns

[update_catalog]
domain = cns
output_dir = cns/locale
input_file = cns/locale/cns.pot
